jenkins/service.yml
kind: Service
apiVersion: v1
metadata: 
  name: jenkins
spec:
  ports:
  - protocol: TCP
    name: jenkins
    port: 8080
    targetPort: 8080
  - protocol: TCP
    name: agent
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins
