jenkins/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.kubernetes.cn
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /jenkins
        pathType: Prefix
